--- a/vscode/package.json
+++ b/vscode/package.json
@@ -9,17 +9,44 @@
     "categories": [
         "Programming Languages"
     ],
+    "activationEvents": [
+        "*"
+    ],
+    "main": "./out/extension.js",
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "lint": "eslint . --ext .ts,.tsx",
+        "watch": "tsc -watch -p ./"
+    },
+    "devDependencies": {
+        "@types/node": "^12.12.0",
+        "@typescript-eslint/eslint-plugin": "^3.0.2",
+        "@typescript-eslint/parser": "^3.0.2",
+        "eslint": "^7.1.0",
+        "typescript": "^3.9.4",
+        "@types/vscode": "^1.32.0"
+    },
     "contributes": {
-        "languages": [{
-            "id": "brainflip",
-            "aliases": ["Brainflip", "brainflip"],
-            "extensions": [".bflip"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "brainflip",
-            "scopeName": "source.brainflip",
-            "path": "./syntaxes/brainflip.tmLanguage.json"
-        }]
+        "languages": [
+            {
+                "id": "brainflip",
+                "aliases": [
+                    "Brainflip",
+                    "brainflip"
+                ],
+                "extensions": [
+                    ".bflip"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "brainflip",
+                "scopeName": "source.brainflip",
+                "path": "./syntaxes/brainflip.tmLanguage.json"
+            }
+        ]
     }
 }
